redundant variables and code deleted